--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "vimeo/psalm": "^4.0"
+        "vimeo/psalm": "^4.0 || ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.5",
@@ -40,6 +40,7 @@
             ]
         }
     },
+    "minimum-stability": "dev",
     "scripts": {
         "check": [
             "@analyze",
